-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2026-03-16
-
200
-
🟦 Shard Catalog
-
None
-
None
-
None
-
None
-
None
-
None
On windows there is a problem with the old legacy mongo shell where there is a race condition between the hashing salt initialization that happens during static initialization and some other thread that gets created as part of DLL loading.
We should refactor the code to be executed under a MONGO_INITIALIZER instead.
- related to
-
SERVER-123703 Fix Windows startup deadlock caused by BCryptOpenAlgorithmProvider DLL load
-
- Closed
-