SERVER-121475 Refactor hashing salt initialization to use MONGO_INITIALIZER (#49469)

GitOrigin-RevId: af491dfd336e41c7041477a9da5ff84dc3f1d9ad